# SpectralLibrary

./: .gitignore  DATABASE_GUIDE.md  LICENSE  README.md  README_ORGANIZED.md  filter_library.py  pyproject.toml
examples/: __init__.py  basic_usage.py
spectral_library/: __init__.py  cli.py  core.py  database.py  database_cli.py  filters.py  loaders.py  processing.py  visualization.py
