[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-library"
description = "A Python package for managing ice and mineral spectra laboratory data for icy moon surface analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ryleigh Davis"}]
keywords = ["spectroscopy", "astronomy", "planetary-science", "icy-moons", "laboratory-spectra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "dataclasses-json>=0.5.0",
    "beautifulsoup4>=4.9.0",
    "tqdm>=4.60.0",
    "astropy>=5.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
mie = [
    "miepython>=2.0.0",
]

[project.urls]
homepage = "https://github.com/ryleighdavis/spectral-library"
repository = "https://github.com/ryleighdavis/spectral-library"
documentation = "https://github.com/ryleighdavis/spectral-library#readme"

[project.scripts]
spectral-filter = "spectral_library.cli:main"
spectral-db = "spectral_library.database_cli:main"

[tool.setuptools]
packages = ["spectral_library"]


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true